crates/inertia-embed/tests/ui/fail/unsupported_cache.stderr
error: embed_frontend! `cache` currently supports only "auto"
 --> tests/ui/fail/unsupported_cache.rs:7:16
  |
7 |         cache: "immutable",
  |                ^^^^^^^^^^^
